A fix for Bug#7365 "embedded server for MacOS: problem with prepared statements": no test case, the test case is there already, libmysqld/examples/client_test.c, we just need to run it on a daily basis.